Update startup.bat