@@ -5,3 +5,5 @@ setlocal & pushd
 set APP_ENTRY=org.tio.examples.im.server.ImServerStarter
 set BASE=%~dp0
 set CP=%BASE%\config;%BASE%\lib\*
+java -Xverify:none -XX:+HeapDumpOnOutOfMemoryError -Dtio.default.read.buffer.size=512 -XX:HeapDumpPath=c:/java-t-io-im-server-pid.hprof -cp "%CP%" %APP_ENTRY%
+endlocal & popd
